--- a/doc/latex/pgfplots/pgfplots.install.tex
+++ b/doc/latex/pgfplots/pgfplots.install.tex
@@ -268,7 +268,8 @@ following options:
         explicitly.
 \end{itemize}
 %
-Please read the corresponding sections in~\cite[Sections~7.2.1 and 7.2.2]{tikz}
+Please read the corresponding sections in
+\href{https://tikz.dev/drivers}{the PGF/TikZ manual (Sections~7.2.1 and 7.2.2)}
 if you have further questions. These sections also contain limitations of
 particular drivers.
 
