--- a/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
@@ -7,10 +7,10 @@
 \PGFPlots{} supports several two-dimensional line plots like piecewise linear
 line plots, piecewise constant plots, smoothed plots, bar plots and comb plots.
 Most of them use the \PGF{} plot handler library directly, see
-\cite[Section~18.8]{tikz}.
+\href{https://tikz.dev/tikz-plots#sec-22.8}{the PGF/TikZ manual (Section~18.8)}.
 
 Plot types are part of the plot style, so they are set with options. Most of
-the basic 2d plot types are part of \Tikz{}, see \cite[Section~18.8]{tikz}, and
+the basic 2d plot types are part of \Tikz{}, see \href{https://tikz.dev/tikz-plots#sec-22.8}{the PGF/TikZ manual (Section~18.8)}, and
 are probably known to users of \Tikz{}. They are documented here as well.
 
 
@@ -53,8 +53,8 @@ are probably known to users of \Tikz{}. They are documented here as well.
 \end{codeexample}
 \end{plottype}
 
-As described in~\cite{tikz} in all detail, this plot handler results in a
-``smooth'' outline. However, it ``not very intelligent'' (compare~\cite{tikz})
+As described in \href{https://tikz.dev/tikz-plots#sec-22.8}{the PGF/TikZ manual} in all detail, this plot handler results in a
+``smooth'' outline. However, it ``not very intelligent'' (compare~\href{https://tikz.dev/tikz-plots#sec-22.8}{the PGF/TikZ manual})
 and is unrelated to common plot-based interpolation schemes.
 
 \begin{key}{/tikz/tension=\marg{tension} (initially 0.55)}
@@ -62,7 +62,7 @@ and is unrelated to common plot-based interpolation schemes.
     it controls the smoothing effect. Higher values results in more ``rounded''
     corners whereas low values result in sharp corners.
 
-    Please refer to~\cite{tikz} for details.
+    Please refer to \href{https://tikz.dev/tikz-plots#sec-22.8}{the PGF/TikZ manual} for details.
 \end{key}
 
 
