--- a/doc/latex/pgfplots/pgfplots.reference.alignment.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.alignment.tex
@@ -15,7 +15,7 @@ unless one needs more than one axis in the same picture environment.
 \begin{pgfplotskey}{at=\marg{coordinate expression}}
     Assigns a position for the complete axis image. This option works similarly
     to the |at| option of |\node[at=|\marg{coordinate expression}|]|,
-    see~\cite{tikz}. The common syntax is |at={|\parg{x,y}|}|.
+    see~\href{https://tikz.dev/}{the PGF/TikZ manual}. The common syntax is |at={|\parg{x,y}|}|.
 
     The idea is to provide an \meta{coordinate expression} where the axis will
     be placed. The axis' anchor will be placed at \meta{coordinate expression}.
@@ -32,7 +32,7 @@ unless one needs more than one axis in the same picture environment.
     position the lower left corner of the axis at $(0,0)$.
 
     For users who are familiar with \Tikz{}: an axis is actually a very special
-    node, so anchors work as in~\cite{tikz}.
+    node, so anchors work as in~\href{https://tikz.dev/}{the PGF/TikZ manual}.
 
     Anchors are useful in conjunction with horizontal or vertical alignment of
     plots, see the examples below.
@@ -505,7 +505,7 @@ here \tikz[baseline]\fill [red] (0,10pt) circle(3pt); another one.
     \emph{single} picture.
 
     The complete documentation of a \Tikz{} matrix is beyond the scope of this
-    manual, please refer to \cite{tikz} for details. But we provide an example
+    manual, please refer to \href{https://tikz.dev/}{the PGF/TikZ manual} for details. But we provide an example
     here:
     %
 \pgfmanualpdflabel{/tikz/matrix}{}%
