--- a/doc/latex/pgfplots/pgfplots.reference.axis-addplot.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.axis-addplot.tex
@@ -1046,9 +1046,9 @@ prefix can always be omitted when used in a \PGFPlots{} method.
             \texttt{factorial}.} |rand| (random between $-1$ and $1$), |rnd|
             (random between $0$ and $1$), number format conversions |hex|,
             |Hex|, |oct|, |bin| and some more. The math parser has been
-            written by Mark Wibrow and Till Tantau~\cite{tikz}, the FPU
+            written by \href{https://tikz.dev/math}{Mark Wibrow and Till Tantau}, the FPU
             routines have been developed as part of \PGFPlots{}. The
-            documentation for both parts can be found in~\cite{tikz}.
+            documentation for both parts can be found in~\href{https://tikz.dev/}{the PGF/TikZ manual}.
 
             Please note, however, that trigonometric functions are defined in
             degrees (see |trig format|). The character `|^|' is used for
@@ -1476,8 +1476,7 @@ pdflatex -shell-escape filename.tex.
     The \meta{options} determine the appearance of the plotted function; these
     parameters also affect the legend. There is also a set of options which are
     specific to the gnuplot interface. These options are described in all
-    detail in \cite[Section~18.6]{tikz}. A short summary is shown below.
-
+    detail in \href{https://tikz.dev/tikz-plots#sec-22.6}{the PGF/TikZ manual, Section 22.6}. A short summary is shown below.
     Some remarks:
     %
     \begin{itemize}
@@ -1496,7 +1495,7 @@ pdflatex -shell-escape filename.tex.
             below.
     \end{itemize}
 
-    Please refer to \cite[Section~18.6]{tikz} for more details about
+    Please refer to \href{https://tikz.dev/tikz-plots#sec-22.6}{the PGF/TikZ manual, Section 22.6} for more details about
     |\addplot function| and the |gnuplot| interaction.
 \end{addplotoperation}
 
@@ -1549,7 +1548,7 @@ pdflatex -shell-escape filename.tex.
 \end{key}
 
 \begin{key}{/tikz/prefix=\marg{file name prefix}}
-    A common path prefix for temporary filenames (see \cite[Section~18.6]{tikz}
+    A common path prefix for temporary filenames (see \href{https://tikz.dev/tikz-plots#sec-22.6}{the PGF/TikZ manual, Section 22.6}
     for details).
 \end{key}
 
@@ -1610,7 +1609,7 @@ pdflatex -shell-escape filename.tex.
     The \meta{options} determine the appearance of the plotted function; these
     parameters also affect the legend. There is also a set of options which are
     specific to the gnuplot and the shell interface. These options are
-    described in all detail in \cite[Section~19.6]{tikz}. A short summary is
+    described in all detail in \href{https://tikz.dev/tikz-plots#sec-22.6}{the PGF/TikZ manual, Section 22.6}. A short summary is
     shown below.
 \end{addplotoperation}
 
@@ -1620,7 +1619,7 @@ pdflatex -shell-escape filename.tex.
 \end{key}
 
 \begin{key}{/tikz/prefix=\marg{file name prefix}}
-    A common path prefix for temporary filenames (see \cite[Section~19.6]{tikz}
+    A common path prefix for temporary filenames (see \href{https://tikz.dev/tikz-plots#sec-22.6}{the PGF/TikZ manual, Section 22.6}
     for details).
 \end{key}
 
@@ -2515,7 +2514,7 @@ with \verbpdfref{\addplot3} |graphics|:
 10.00000 -0.54402 i
 \end{codeexample}
     %
-    This listing has been copied from~\cite[Section~16.4]{tikz}.
+    This listing has been copied from~\href{https://tikz.dev/tikz-plots#sec-22.4}{the PGF/TikZ manual, Section 22.4}.
 
     Plot file accepts one optional argument,
 
