--- a/doc/latex/pgfplots/pgfplots.reference.axisdescription.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.axisdescription.tex
@@ -66,9 +66,9 @@ use it explicitly.
 \end{codeexample}
 
     Axis descriptions are \Tikz{} nodes, that means all placement and detail
-    options of \cite{tikz} apply. The point on the node's boundary which is
+    options of \href{https://tikz.dev/}{TikZ} apply. The point on the node's boundary which is
     actually shifted to the |at| coordinate needs to be provided with an anchor
-    (cf~\cite[``Nodes and Edges'']{tikz}):
+    (cf~\href{https://tikz.dev/tikz-shapes}{the PGF/TikZ manual, Section ``Nodes and edges''}):
     %
 \begin{codeexample}[]
 \begin{tikzpicture}
@@ -86,7 +86,7 @@ use it explicitly.
 \end{codeexample}
 
     Standard anchors of nodes are |north|, |east|, |south|, |west| and mixed
-    components like |north east|. Please refer to \cite{tikz} for a complete
+    components like |north east|. Please refer to \href{https://tikz.dev/}{the PGF/TikZ manual} for a complete
     documentation of anchors.
 
 
@@ -353,7 +353,7 @@ actually be moved to the desired position.
 \Tikz{} uses many anchors to provide alignment; most of them are named like
 |north|, |north east| etc. These names hold for any axis description as well
 (as axis descriptions are \Tikz{} nodes). Readers can learn details about this
-topic in the \Tikz{} manual~\cite{tikz} or some more advice in
+topic in \href{https://tikz.dev/}{the PGF/TikZ manual} or some more advice in
 Section~\ref{sec:pgfplots:sec:align}.
 
 When it comes to axis descriptions, \PGFPlots{} offers some specialized anchors
@@ -728,7 +728,7 @@ and alignment methods which are described below.
 \end{axis}
 \end{codeexample}
     %
-    \noindent See \cite{tikz} to learn more about |align| and |text width|.
+    \noindent See \href{https://tikz.dev/}{the PGF/TikZ manual} to learn more about |align| and |text width|.
 
     \paragraph{Upgrade notice:}
 
@@ -1159,7 +1159,7 @@ Legends can be generated in two ways: the first is to use |\addlegendentry| or
     \emph{of the legend} will be placed at $(0,0)$ or $(1,1)$.
 
     The legend is a \Tikz{} matrix, so one can use any \Tikz{} option which
-    affects nodes and matrices (see~\cite[Chapters~13 and 14]{tikz}). The
+    affects nodes and matrices (see~\href{https://tikz.dev/tikz-matrices}{the PGF/TikZ manual}). The
     matrix is created by something like
     %
 \begin{codeexample}[code only]
