--- a/doc/latex/pgfplots/pgfplots.reference.bb-clip.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.bb-clip.tex
@@ -103,8 +103,7 @@ to use negative |\hspace| or |\vspace| commands (or options to
 \end{tikzpicture}
 \end{codeexample}
 
-    More information about the |overlay| option can be found in the \PGF{}
-    manual~\cite{tikz}.
+    More information about the |overlay| option can be found in the \href{https://tikz.dev/}{the PGF/TikZ manual}.
 \end{key}
 
 \begin{command}{\pgfresetboundingbox}
@@ -181,7 +180,7 @@ to use negative |\hspace| or |\vspace| commands (or options to
     %
     The |pgfinterruptboundingbox| environment does not include its content into
     the image's bounding box, and |\useasboundingbox| sets the pictures
-    bounding box to the following argument (see~\cite{tikz}).
+    bounding box to the following argument (see~\href{https://tikz.dev/}{the PGF/TikZ manual}).
 \end{environment}
 
 \begin{keylist}{%
