klein bottle title simplification

--- a/doc/latex/pgfplots/pgfplots.reference.3dplots.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.3dplots.tex
@@ -3541,8 +3541,7 @@ Another example follows. Note that |z buffer=sort| is a necessary method here.
     \begin{axis}[
         xlabel=$x$, ylabel=$y$,
         view/h=-10,
-        title=\footnotesize
- http://en.wikipedia.org/wiki/Klein_bottle,
+        title=Klein bottle,
     ]
         \addplot3 [
             surf,
