--- a/doc/latex/pgfplots/pgfplots.preamble.tex
+++ b/doc/latex/pgfplots/pgfplots.preamble.tex
@@ -91,6 +91,7 @@
 
 \usepackage{textcomp}
 \usepackage{booktabs}
+\usepackage[table]{xcolor} % fix for lwarp 0.912
 \usepackage{colortbl}
 
 \usepackage{calc}
@@ -139,7 +140,6 @@
 
 \usepackage[a4paper,left=2.25cm,right=2.25cm,top=2.5cm,bottom=2.5cm]{geometry}
 \usepackage{amsmath,amssymb}
-\usepackage{xxcolor}
 
 \usepackage{ifluatex}
 
