--- a/doc/latex/pgfplots/pgfplots.libs.clickable.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.clickable.tex
@@ -120,7 +120,7 @@ to load it into Acrobat Reader and simply click into a plot.
     If you want the $(x,y)$ values to be displayed, use the special placeholder
     string `|(xy)|' inside of \meta{displayed text}. As an example, we consider
     again the |scatter/classes| example of
-    page~\pageref{pgfplots:scatterclasses}:
+    Section~\ref{pgfplots:scatterclasses}:
     %
 \begin{codeexample}[code only]
 \begin{tikzpicture}
