--- a/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
@@ -728,8 +728,7 @@ in one axis can be stacked on top of each other or aligned next to each other.
 \end{stylekey}
 
 \begin{pgfplotsxykey}{\x ticklabel interval boundaries}
-    These are style keys which set |x tick label as interval| (see
-    \ref{key:pgfplots:ticklabelasinterval} for details) and configure
+    These are style keys which set |x tick label as interval| and configure
     the tick appearance to be \meta{start} -- \meta{end} for each tick
     interval.
 \end{pgfplotsxykey}
