--- a/doc/latex/pgfplots/pgfplots.title_abstract_intro.tex
+++ b/doc/latex/pgfplots/pgfplots.title_abstract_intro.tex
@@ -1,5 +1,5 @@
 
-\section[index]{Introduction}
+\part[index]{Introduction}
 
 \BlockClassSingle{manual-title-block}{%
 \BlockClassSingle{manual-title}{Manual for Package \PGFPlots{}}
