--- a/doc/latex/pgfplots/pgfplots.libs.colorbrewer.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.colorbrewer.tex
@@ -867,7 +867,7 @@ To find a scheme, e.g.\@ the above chosen \texttt{GnBu-7} on
 \subsection{External Examples}
 
 If you want to see some examples, where Brewer has used her schemes, have a
-look at \url{https://www.census.gov/population/www/cen2000/atlas/index.html}.
+look at \href{https://www.census.gov/population/www/cen2000/atlas/index.html}{this census.gov page}.
 
 \end{pgfplotslibrary}
 
