--- a/doc/latex/pgfplots/pgfplots.libs.smithchart.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.smithchart.tex
@@ -13,13 +13,9 @@
     charts: it visualizes two-dimensional input coordinates $z \in \mathbb{C} $ of the
     form $z = x+ j y \in \mathbb{C}$ ($j$ being the imaginary unit, $j^2=-1$) with $x
     \ge 0$ using the map
-    %
-        \[
-            r\colon [0,\infty] \times [-\infty,\infty] \to
-                \{ a+j b \;\vert\;  a^2 + b^2 = 1 \},
-                    \quad r(z) = \frac{z-1}{z+1}
-        \]
-    %
+    $r\colon [0,\infty] \times [-\infty,\infty]$ $\to$
+    $\{ a+j b \;\vert\;  a^2 + b^2 = 1 \}$,
+    $r(z) = \frac{z-1}{z+1}$
     using complex number division. The result is always in the unit circle.
 
     The main application for Smith charts is in the area of electrical and
