--- a/doc/latex/pgfplots/pgfplotstable.tex
+++ b/doc/latex/pgfplots/pgfplotstable.tex
@@ -2010,7 +2010,7 @@ All these number formatting options can also be applied to \PGFPlots{}.
 \end{codeexample}
     %
     The parameters can be customized using the optional integer argument(s): if
-    $\text{\meta{lower e}} \le e \le \text{\meta{upper e}}$, the number is
+    \meta{lower e} $\le e \le$ \meta{upper e}, the number is
     displayed in |fixed| format, otherwise in |sci| format. Note that
     \meta{lower e} should be negative for useful results. The precision used
     for scientific format can be adjusted with |sci precision| if necessary.
